# debug-cli

./: .dockerignore  .flake8  .gitignore  Dockerfile  HOW_TO_USE.md  Makefile  README.md  bandit-report.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml  publish.yml
debug_cli/: __init__.py  main.py
debug_cli/ai/: __init__.py  explanation_service.py  openai_client.py
debug_cli/core/: __init__.py  command_capture.py  shell_integration.py
debug_cli/models/: __init__.py  command.py  explanation.py
debug_cli/utils/: __init__.py  clipboard.py  config.py  output_formatter.py
tests/: __init__.py  test_command_capture.py  test_models.py
